feat: added multiple inputs
